# setuptools-git-versioning

./: .coveragerc  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  .travis.yml  CHANGELOG.rst  CONTRIBUTING.rst  MANIFEST.in  Makefile  README.md  README.rst  bandit.yaml  pyproject.toml  pytest.ini  readme.md  requirements-dev.txt  requirements-doc.txt  requirements-test.txt  requirements.txt  setup.cfg  setup.py  setuptools_git_ver.py  setuptools_git_versioning.py
.github/: CODEOWNERS  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml  labels.yml  lock.yml  no-response.yml
.github/workflows/: automerge.yml  changelog.yml  codeql-analysis.yml  dev-release.yml  release.yml  repo-labels-sync.yml  test.yml
docs/: changelog.rst  ci.rst  command.rst  comparison.rst  comparison_table.rst  conf.py  contribution.rst  differences.rst  index.rst  install.rst  installation.rst  main.rst  robots.txt  runtime_version.rst
docs/changelog/: 1.1.x.rst  1.10.x.rst  1.11.x.rst  1.12.x.rst  1.13.x.rst  1.2.x.rst  1.3.x.rst  1.4.x.rst  1.5.x.rst  1.6.x.rst  1.7.x.rst  1.8.x.rst  1.9.x.rst  2.0.x.rst  2.1.x.rst  3.0.x.rst  index.rst
docs/common_issues/: all_dirty.rst  index.rst  sphinx_usage.rst  wrong_tag.rst
docs/options/: branch_formatter.rst  count_commits.rst  dev_template.rst  dirty_template.rst  enabled.rst  index.rst  sort_by.rst  starting_version.rst  tag_filter.rst  tag_formatter.rst  template.rst  version_callback.rst  version_file.rst
docs/schemas/: index.rst
docs/schemas/callback/: index.rst  version_callback.rst
docs/schemas/file/: dev_release_file.rst  index.rst  version_file.rst
docs/schemas/tag/: dirty_version.rst  index.rst  post_release.rst  tag_release.rst
docs/substitutions/: branch.rst  ccount.rst  env.rst  full_sha.rst  index.rst  sha.rst  tag.rst  timestamp.rst
docs/usage/: dev_release.rst  dev_release_any_branch.rst  index.rst  options.rst  simple_release.rst  version_callback.rst  version_file.rst
setuptools_git_versioning/: __init__.py  __main__.py  cli.py  defaults.py  factories.py  git.py  log.py  setup.py  subst.py  version.py
tests/: conftest.py  test_branch_formatter.py  test_config.py  test_exceptions.py  test_substitution.py  test_tag.py  test_tag_formatter.py  test_version_callback.py  test_version_config.py  test_version_file.py
tests/lib/: util.py
tests/test_integration/: conftest.py  test_branch_formatter.py  test_command.py  test_config.py  test_substitution.py  test_tag.py  test_tag_filter.py  test_tag_formatter.py  test_version_callback.py  test_version_file.py
