[build-system]
requires = [
    "packaging",
    "setuptools",
    'tomli>=2.0.1; python_version<"3.11"',
    "wheel",
]
build-backend = "setuptools.build_meta:__legacy__"

[project]
name = "setuptools-git-versioning"
dynamic = ["version"]
authors = [{name = "dolfinus", email = "martinov.m.s.8@gmail.com"}]
license = {text = "MIT"}
description = "Use git repo data for building a version number according to PEP-440"
keywords = ["setuptools", "git", "versioning", "pep-440"]
classifiers = [
    "Framework :: Setuptools Plugin",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
]
requires-python = ">=3.7"
dependencies = [
    "packaging",
    "setuptools",
    'tomli>=2.0.1; python_version<"3.11"',
]

[project.readme]
file = "README.rst"
content-type = "text/x-rst"

[project.urls]
Homepage = "https://setuptools-git-versioning.readthedocs.io"
Documentation = "https://setuptools-git-versioning.readthedocs.io"
Source = "https://github.com/dolfinus/setuptools-git-versioning"
"CI/CD" = "https://github.com/dolfinus/setuptools-git-versioning/actions"
Coverage = "https://app.codecov.io/gh/dolfinus/setuptools-git-versioning"
Tracker = "https://github.com/dolfinus/setuptools-git-versioning/issues"

[project.entry-points."distutils.setup_keywords"]
setuptools_git_versioning = "setuptools_git_versioning:parse_config"

[project.entry-points."setuptools.finalize_distribution_options"]
setuptools_git_versioning = "setuptools_git_versioning:infer_version"

[tool.setuptools-git-versioning]
enabled = true
dev_template = "{tag}.post{ccount}"


[dependency-groups]
dev = [
  "ruff~=0.14.11",
  "pre-commit~=4.5.1",
]
test = [
  "build>=1.1.1",
  "coverage>=7.2.7",
  "pytest>=7.4.4",
  "pytest-rerunfailures>=13.0",
  "pytest-xdist>=3.5.0",
  # Some tests need to write TOML, but tomli and tomllib are read-only, and toml package is unmaintained
  "tomli-w>=1.0.0",
  "wheel>=0.42.0",
]
docs = [
  "changelog~=0.6.2",
  "furo~=2025.12.19",
  "numpydoc~=1.10.0",
  "sphinx~=9.1.0",
  "sphinx-argparse~=0.5.2",
  "sphinx-autodoc-typehints~=3.6.2",
  "sphinx-last-updated-by-git~=0.3.8",
  "sphinx-tabs~=3.4.7",
]

[tool.uv]
default-groups = []

[tool.uv.dependency-groups]
dev = {requires-python = ">=3.12"}
docs = {requires-python = ">=3.12"}

[tool.ruff]
target-version = "py37"
line-length = 120

[tool.ruff.lint]
select = ["ALL"]
ignore = ["ARG", "ANN", "A002", "COM812", "D", "TD", "FIX002", "PLC0415"]

[tool.ruff.lint.per-file-ignores]
"docs/conf.py" = ["INP001"]
"tests/*" = [
    "S",
    "EM101",
    "PLR2004",
    "TRY003",
    "DTZ005",
]

[pytest.ini_options]
markers = [
    "all: mark all tests",
    "important: mark only important tests (e.g. functions which depend on OS and Python version)",
]

[tool.mypy]
follow_imports = "silent"
ignore_missing_imports = true
pretty = true
show_error_codes = true
strict_optional = true
